...
    <string name="NewTD">New Draft</string>
    <string name="TitleTD">Add Title</string>
    <string name="SubTD">What Do You Feel?</string>
    <string name="SaveTD">Save</string>
    <string name="TDSavedSuccess">The Text Draft Saved Successfully</string>
    <string name="TDSavedFialed">The Text Draft Did not Saved, Try Again</string>
    <string name="EmptyFields">All Fields Required</string>

    <!-- Edit Text Draft Page -->
    <string name="EditTD">Edit Draft</string>
    <string name="SaveChangesTD">Save Changes</string>
    <string name="DeleteTD">Delete Draft</string>
    <string name="DeleteMessageTD">Are you sure you want to delete this Draft ? </string>
...
    <string name="ExistUser">* Email already used by another account.</string>
    <string name="PasswordShort">* Password must be at least 6 characters.</string>
    <string name="SignUpSuccess">Signed Up Success</string>
    <string name="SignUpFialed">* Sign in Failed, Please try again</string>

    <!-- Socio in Sign up Page -->
    <string name="NotValidAge">Please Enter Valid Age Value Between 5 to 110 Years Old</string>
    <string name="NotValidHeight">Please Enter Valid Height Value Between 50 to 300 CM</string>
    <string name="NotValidWeight">Please Enter Valid Weight Value Between 20 to 300 KG</string>
    <string name="NotValidMI">Please Enter Valid Monthly Income Value should be no more than 5000000</string>
    <string name="NotValidCD">Only Letters Accepted in Chronic Disease</string>
    <string name="SocioSuccess">Success going to next</string>
    <string name="SocioFialed">There is Something Wrong, Please try again</string>

    <!-- GAD7 in Sign up Page -->
    <string name="GADSuccess">Success going to next</string>
    <string name="GADFialed">There is Something Wrong, Please try again</string>
...
